# ncursesDEMO

./: CMakeLists.txt
JustForFun/: hanoi.c  life.c  magic.c  queens.c  shuffle.c  tt.c
basics/: CMakeLists.txt  acs_vars.c  hello_world.c  hello_world.cpp  init_func_example.c  key_code.c  mouse_menu.c  other_border.c  playground.cpp  printw_example.c  scanw_example.c  simple_attr.c  simple_color.c  simple_key.c  temp_leave.c  win_border.c  with_chgat.c
forms/: CMakeLists.txt  form_attrib.c  form_options.c  form_simple.c  form_win.c
menus/: CMakeLists.txt  menu_attrib.c  menu_item_data.c  menu_multi_column.c  menu_scroll.c  menu_simple.c  menu_toggle.c  menu_userptr.c  menu_win.c
panels/: CMakeLists.txt  panel_browse.c  panel_hide.c  panel_resize.c  panel_simple.c
